--- a/src/style.css
+++ b/src/style.css
@@ -104,7 +104,7 @@ body {
   border-radius: 10px;
   border: 1px solid #c4c4c4;
   margin-bottom: 25px;
-  max-height: 105px;
+  /* max-height: 105px; */
   overflow-y: scroll;
 }
 
